[gd_scene load_steps=15 format=3 uid="uid://c7e3gqyd0nmxu"]

[ext_resource type="Script" uid="uid://dsoosterkel2s" path="res://Source/player/player.gd" id="1_86loi"]
[ext_resource type="PackedScene" uid="uid://cx1icbr8rsjsc" path="res://Resources/Scenes/player/animation_instance.tscn" id="2_0uhm2"]
[ext_resource type="AudioStream" uid="uid://ci88j06ot6xx0" path="res://Resources/Audio/Player/magnet_engaging.mp3" id="3_2av1q"]
[ext_resource type="AudioStream" uid="uid://ctfx7urkqtmls" path="res://Resources/Audio/Player/hearbeat.mp3" id="4_cgvw3"]
[ext_resource type="FontFile" uid="uid://b0ew3p0ayuglx" path="res://Resources/Fonts/stoNe.ttf" id="4_ejyiv"]
[ext_resource type="FontFile" uid="uid://clojhv4cfuhqq" path="res://Resources/Fonts/airstrip.ttf" id="5_ym0qn"]
[ext_resource type="Texture2D" uid="uid://dk2aqjnltxdau" path="res://Resources/Textures/UI/2x/Stripe@2x.png" id="7_1pvco"]
[ext_resource type="Texture2D" uid="uid://67q3qlbbans2" path="res://Resources/Textures/UI/2x/EmptyCharge@2x.png" id="8_nfodo"]
[ext_resource type="Texture2D" uid="uid://csicg8tu6nuxy" path="res://Resources/Textures/UI/2x/FullCharge@2x.png" id="9_nfodo"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_brtp2"]
radius = 0.525305
height = 2.52537

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2av1q"]

[sub_resource type="BoxShape3D" id="BoxShape3D_2av1q"]
size = Vector3(2.42285, 3.30566, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_86loi"]
radius = 0.296823

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_0uhm2"]
random_pitch = 1.1
random_volume_offset_db = 3.0
streams_count = 1
stream_0/stream = ExtResource("3_2av1q")

[node name="Player" type="CharacterBody3D"]
floor_max_angle = 1.0472
script = ExtResource("1_86loi")

[node name="Collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.996691, 0)
shape = SubResource("CapsuleShape3D_brtp2")

[node name="Gimbal" type="Node3D" parent="."]

[node name="CamHead" type="Node3D" parent="Gimbal"]

[node name="Camera3D" type="Camera3D" parent="Gimbal/CamHead"]
doppler_tracking = 2
fov = 92.0
far = 200.0

[node name="animation" parent="Gimbal/CamHead/Camera3D" instance=ExtResource("2_0uhm2")]

[node name="Skeleton3D" parent="Gimbal/CamHead/Camera3D/animation/FPArmature" index="0"]
bones/0/rotation = Quaternion(0.261461, 0.267504, -0.787948, 0.489099)
bones/1/rotation = Quaternion(-0.493442, 0.00365181, -0.20933, 0.844205)
bones/2/rotation = Quaternion(0.00737185, 0.00182886, 0.695182, 0.718794)
bones/3/rotation = Quaternion(-0.0833241, -0.00430793, 0.0353482, 0.995886)
bones/4/position = Vector3(-1.86505, -0.532897, -0.287921)
bones/4/rotation = Quaternion(7.02719e-08, -0.0814721, 0, 0.996676)
bones/6/rotation = Quaternion(-0.313018, 0.0139721, 0.00452948, 0.949634)
bones/7/rotation = Quaternion(-0.0468716, -0.00127951, 0.0029046, 0.998896)
bones/9/rotation = Quaternion(-0.106143, -0.00048702, -0.0110357, 0.99429)
bones/10/rotation = Quaternion(-0.0155026, 0.000257707, -0.00407026, 0.999872)
bones/11/rotation = Quaternion(0.012288, -0.00078415, 0.0552215, 0.998398)
bones/12/rotation = Quaternion(-0.0652678, -0.000146078, -0.0210826, 0.997645)
bones/13/rotation = Quaternion(0.0115653, -6.53173e-05, 0.00359163, 0.999927)
bones/14/rotation = Quaternion(0.0203986, -0.000606104, 0.0204454, 0.999583)
bones/16/rotation = Quaternion(0.0136644, -7.73914e-05, -0.00300613, 0.999902)
bones/19/rotation = Quaternion(-0.00910145, -0.000979618, 0.023526, 0.999681)
bones/21/position = Vector3(1.45587, -0.705043, -0.843787)
bones/21/rotation = Quaternion(0.340275, 0.601414, -0.66919, 0.273312)
bones/23/rotation = Quaternion(-0.599093, -0.00565857, -0.357612, 0.716358)
bones/25/rotation = Quaternion(0.0380605, -0.310095, -0.39033, 0.866046)
bones/26/rotation = Quaternion(-0.125597, -0.0168354, -0.590648, 0.796917)
bones/27/rotation = Quaternion(-0.0122509, -0.00950338, -0.596382, 0.802551)
bones/28/rotation = Quaternion(-0.0415245, -0.00282957, -0.338987, 0.93987)
bones/30/rotation = Quaternion(0.00773877, 0.00859485, -0.741721, 0.670609)
bones/32/rotation = Quaternion(0.0146267, -0.0377671, -0.671691, 0.739724)
bones/34/rotation = Quaternion(0.0993536, -0.148075, -0.339622, 0.923504)
bones/35/rotation = Quaternion(0.0844311, 0.00747366, -0.567768, 0.818813)
bones/36/rotation = Quaternion(0.0287972, 0.0190898, -0.673602, 0.738286)

[node name="BoneAttachment3D" parent="Gimbal/CamHead/Camera3D/animation/FPArmature/Skeleton3D" index="2"]
transform = Transform3D(-0.29869, 0.0976981, 0.949336, -0.0514815, 0.991648, -0.11825, -0.952961, -0.0841933, -0.291166, 1.26105, -0.841274, -0.930027)

[node name="AnimatedSprite3D" parent="Gimbal/CamHead/Camera3D/animation/FPArmature/Skeleton3D/BoneAttachment3D" index="0"]
frame_progress = 0.105037

[node name="HitArea" type="Area3D" parent="Gimbal/CamHead/Camera3D/animation/FPArmature/Skeleton3D/BoneAttachment3D" index="2"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gimbal/CamHead/Camera3D/animation/FPArmature/Skeleton3D/BoneAttachment3D/HitArea"]
transform = Transform3D(0.999181, 0.0197918, -0.0352951, -0.0179948, 0.99856, 0.0505391, 0.036244, -0.049863, 0.998099, 0.128623, 1.29491, -0.00755)
shape = SubResource("CapsuleShape3D_2av1q")

[node name="DeflectArea" type="Area3D" parent="Gimbal/CamHead/Camera3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Gimbal/CamHead/Camera3D/DeflectArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.525391, -1.17454)
shape = SubResource("BoxShape3D_2av1q")

[node name="BootsArea" type="Area3D" parent="."]

[node name="BootsShape" type="CollisionShape3D" parent="BootsArea" groups=["BootsArea"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.92689, 0)
shape = SubResource("SphereShape3D_86loi")

[node name="MagnetAudioPlayer" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_0uhm2")
volume_db = -20.0
max_db = -10.0

[node name="DeathTimer" type="Timer" parent="."]
process_mode = 3

[node name="HeartBeatPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
stream = ExtResource("4_cgvw3")
volume_db = 9.905

[node name="DeadOL" type="MarginContainer" parent="."]
process_mode = 3
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="DeadOL"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverText" type="Label" parent="DeadOL/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_ejyiv")
theme_override_font_sizes/font_size = 126
text = "Game Over!"

[node name="ReasonText" type="Label" parent="DeadOL/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_ym0qn")
theme_override_font_sizes/font_size = 50
text = "You died!"

[node name="HUD" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Label" type="Label" parent="HUD"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("5_ym0qn")
theme_override_font_sizes/font_size = 10
text = "x"

[node name="TextureRect" type="TextureRect" parent="HUD"]
layout_mode = 2
texture = ExtResource("7_1pvco")
expand_mode = 3
stretch_mode = 4

[node name="Control" type="Control" parent="HUD"]
layout_mode = 2

[node name="ChargeOneBorder" type="TextureRect" parent="HUD/Control"]
layout_mode = 2
offset_left = 75.0
offset_top = 15.0
offset_right = 220.0
offset_bottom = 67.0
texture = ExtResource("8_nfodo")
expand_mode = 1
stretch_mode = 4

[node name="ChargeOneFill" type="TextureRect" parent="HUD/Control"]
layout_mode = 2
offset_left = 75.0
offset_top = 15.0
offset_right = 220.0
offset_bottom = 67.0
texture = ExtResource("9_nfodo")
expand_mode = 1
stretch_mode = 4

[node name="ChargeTwoBorder" type="TextureRect" parent="HUD/Control"]
layout_mode = 2
offset_left = 187.0
offset_top = 15.0
offset_right = 332.0
offset_bottom = 67.0
texture = ExtResource("8_nfodo")
expand_mode = 1
stretch_mode = 4

[node name="ChargeTwoFill" type="TextureRect" parent="HUD/Control"]
layout_mode = 2
offset_left = 187.0
offset_top = 15.0
offset_right = 332.0
offset_bottom = 67.0
texture = ExtResource("9_nfodo")
expand_mode = 1
stretch_mode = 4

[node name="ChargeThreeBorder" type="TextureRect" parent="HUD/Control"]
layout_mode = 2
offset_left = 299.0
offset_top = 15.0
offset_right = 444.0
offset_bottom = 67.0
texture = ExtResource("8_nfodo")
expand_mode = 1
stretch_mode = 4

[node name="ChargeThreeFill" type="TextureRect" parent="HUD/Control"]
layout_mode = 2
offset_left = 299.0
offset_top = 15.0
offset_right = 444.0
offset_bottom = 67.0
texture = ExtResource("9_nfodo")
expand_mode = 1
stretch_mode = 4

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
follow_viewport_enabled = true

[node name="WinOL" type="MarginContainer" parent="CanvasLayer"]
process_mode = 3
visible = false
z_index = 270
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/WinOL"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 45

[node name="GameOverText" type="Label" parent="CanvasLayer/WinOL/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("4_ejyiv")
theme_override_font_sizes/font_size = 126
text = "You Won!"

[node name="Button" type="Button" parent="CanvasLayer/WinOL/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("5_ym0qn")
theme_override_font_sizes/font_size = 66
text = "Try Again?"

[connection signal="body_entered" from="Gimbal/CamHead/Camera3D/animation/FPArmature/Skeleton3D/BoneAttachment3D/HitArea" to="." method="_on_hit_area_body_entered"]
[connection signal="area_entered" from="Gimbal/CamHead/Camera3D/DeflectArea" to="." method="_on_deflect_area_area_entered"]
[connection signal="area_entered" from="BootsArea" to="." method="_on_boots_area_area_entered"]
[connection signal="area_exited" from="BootsArea" to="." method="_on_boots_area_area_exited"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_death_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/WinOL/VBoxContainer/Button" to="." method="_on_play_again_pressed"]

[editable path="Gimbal/CamHead/Camera3D/animation"]
